changes on algorithms